imports + agon core integration + centrality heuristic